# myra

./: .gitignore  .secrets.example  Makefile  api.md  docker-compose.yml  readme.md  thunder-collection_myra_postman.json
server/ai/: Cargo.toml
server/ai/src/: action_provider.rs  config.rs  conversation.rs  conversation_provider.rs  data_provider.rs  embedding.rs  lib.rs  provider.rs  rate_limit_provider.rs
server/ai/src/agents/: approval.rs  categorizer.rs  chat.rs  chat_utils.rs  mod.rs
server/ai/src/jobs/: mod.rs  title.rs
server/ai/src/models/: account.rs  action.rs  aggregate.rs  chat.rs  error.rs  mod.rs  receipt.rs  reference.rs  search.rs  tool_output.rs  transactions.rs  wealth.rs
server/ai/src/tools/: account_tools.rs  aggregate_transactions.rs  create_custom_asset.rs  create_transaction.rs  create_transaction_group.rs  delete_transaction.rs  get_asset_price.rs  get_holdings.rs  get_net_worth_history.rs  get_portfolio_overview.rs  get_transaction_detail.rs  group_transactions.rs  list_accounts.rs  mod.rs  query_transactions.rs  record_asset_swap.rs  record_asset_trade.rs  record_asset_transfer.rs  record_cash_transfer.rs  record_dividend.rs  record_fee.rs  record_transfer.rs  run_script.rs  search_assets.rs  search_categories.rs  search_transactions.rs  transaction_tools.rs  update_asset_valuation.rs  update_transaction.rs
server/ai/src/workflows/: mod.rs  receipt_processor.rs
server/api/: Cargo.toml  build.rs  generate_ts_bindings.sh  typeshare.toml
server/api/src/: app_error.rs  auth.rs  auth_feature_check.rs  auth_middleware.rs  converters.rs  errors.rs  extractors.rs  lib.rs  main.rs  observability.rs  openapi.rs  parsers.rs  routes.rs  states.rs
server/api/src/errors/: api_error_response.rs  app.rs  auth.rs
server/api/src/handlers/: account_portfolio_handler.rs  accounts_handler.rs  ai_conversation_handler.rs  ai_handler.rs  ai_quick_upload_handler.rs  ai_usage_handler.rs  asset_handler.rs  assets.rs  auth_handler.rs  category_handler.rs  connectors_handler.rs  constants_handler.rs  file_handler.rs  individual_transactions.rs  mod.rs  portfolio.rs  portfolio_handler.rs  transaction_groups.rs  transaction_handler.rs  transactions.rs  user_asset_handler.rs  user_category_handler.rs  user_handler.rs  users.rs
server/api/src/models/: assets.rs  mod.rs  portfolio.rs  transaction.rs  users.rs
server/api/src/observability/: sql_highlighter.rs
server/api/src/openapi/: cleanup.rs  modifiers.rs  overview.md
server/api/src/view_models/: add_asset_rate_view_model.rs  add_asset_view_model.rs  add_transaction_group_view_model.rs  add_transaction_view_model.rs  add_user_view_model.rs  asset_pair_view_model.rs  asset_rate_view_model.rs  asset_view_model.rs  auth_view_model.rs  category_view_model.rs  login_details_view_model.rs  mod.rs  portfolio_account_view_model.rs  portfolio_entry_view_model.rs  portfolio_history_view_model.rs  portfolio_overview_view_model.rs  portfolio_view_model.rs  transaction_group_list_view_model.rs  transaction_group_view_model.rs  transaction_view_model.rs  update_transaction_group_view_model.rs  update_transaction_view_model.rs  user_view_model.rs  value_types.rs
server/app-core/: Cargo.toml
server/app-core/src/: error.rs  lib.rs  models.rs  money.rs
server/app-core/src/api/: account_overview.rs  account_transactions.rs  accounts.rs  ai_usage.rs  asset_overview.rs  asset_rates.rs  assets.rs  cache.rs  categories.rs  client.rs  create_transaction.rs  create_transaction_group.rs  entry_helpers.rs  get_transaction.rs  holdings.rs  mod.rs  quick_upload.rs  transactions.rs  update_transaction.rs  update_transaction_group.rs
server/app-core/src/store/: account_detail.rs  account_transactions.rs  accounts.rs  ai_chat.rs  ai_usage.rs  asset_detail.rs  asset_overview.rs  assets.rs  categories.rs  infra.rs  mod.rs  onboarding.rs  portfolio.rs  quick_uploads.rs  sse.rs  transactions.rs
server/asset_aggregator/: Cargo.toml
server/asset_aggregator/src/: add_data_to_existing_asset_pair.rs  add_new_asset_with_data.rs  main.rs  update_current_assets.rs
server/business/: Cargo.toml
server/business/src/: lib.rs  loader.rs  service_collection.rs  test_support.rs
server/business/src/dtos/: add_custom_asset_dto.rs  add_custom_asset_pair_dto.rs  add_update_transaction_dto.rs  add_update_transaction_group_dto.rs  add_user_dto.rs  ai_chat_dto.rs  ai_chat_error_dto.rs  ai_conversation_dto.rs  ai_error_dto.rs  ai_message_dto.rs  ai_quick_upload_dto.rs  ai_usage_dto.rs  asset_dto.rs  asset_id_date_dto.rs  asset_insert_dto.rs  asset_insert_result_dto.rs  asset_pair_date_dto.rs  asset_pair_insert_dto.rs  asset_pair_rate_dto.rs  asset_pair_rate_insert_dto.rs  asset_quantity_dto.rs  asset_rate_dto.rs  asset_ticker_pair_ids_dto.rs  auth_dto.rs  bad_gateway_error_dto.rs  bad_request_error_dto.rs  category_dto.rs  combined_transaction_dto.rs  conflict_error_dto.rs  entry_dto.rs  fee_entry_dto.rs  fee_entry_types_dto.rs  file_dto.rs  individual_transaction_filters_dto.rs  mod.rs  not_found_error_dto.rs  page_of_results_dto.rs  paging_dto.rs  portfolio_account_dto.rs  portfolio_dto.rs  (+12 more)
server/business/src/dynamic_enums/: fee_categories.rs  mod.rs  transaction_type_categories.rs
server/business/src/entities/: market_data.rs  mod.rs  range.rs
server/business/src/jobs/: mod.rs
server/business/src/models/: assets.rs  mod.rs  user.rs  (+2 more)
server/cli/: Cargo.toml
server/cli/src/: add_asset.rs  asset_update.rs  main.rs
server/connectors/: Cargo.toml
server/connectors/src/: client_supplied.rs  dedup.rs  lib.rs  port.rs  provider.rs  util.rs
server/dal/: Cargo.toml  build.rs
server/dal/src/: database_connection.rs  database_context.rs  file_provider.rs  job_queue.rs  lib.rs  market_data_client.rs  noop_file_provider.rs  pg_notify_connection.rs  redis_connection.rs  s3_file_provider.rs  secrets.rs
server/observability/: Cargo.toml
server/observability/src/: lib.rs  sql_highlighter.rs
server/shared/: Cargo.toml  build.rs
server/shared/src/: errors.rs  lib.rs
server/worker/: Cargo.toml
server/worker/src/: lib.rs  main.rs  retry.rs
(+1223 files in other folders)
