[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
business = {path="../business"}
macros = {path="../macros"}
axum = { version = "0.8.4", features = ["query", "macros"] }
serde = "1.0.219"
tokio = { version = "1.46.1", features = ["full"] }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.6", features = ["full"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
anyhow = { version = "1.0.98", features = ["backtrace"] }
rust_decimal = { version = "1.37.2", features = ["serde-with-arbitrary-precision"] }
time = { version = "0.3.41", features = ["macros", "formatting", "serde"] }
tracing-subscriber = { version = "0.3.19", features = ["std", "env-filter"] }
tracing = { version = "0.1.41", features = ["async-await", "log"] }
tracing-opentelemetry = { version = "0.31.0" }
opentelemetry = { version = "0.30.0", features = ["metrics"] }
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic"] }
serde_json = "1.0.140"
utoipa = { version = "5.4.0", features = ["axum_extras", "time", "uuid", "decimal_float", "config", "debug"] }
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }
rust_decimal_macros = "1.37.1"
paste = "1.0.15"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
itertools = "0.14.0"
syntect = { optional = true, version = "5.2.0" }
async-trait = "0.1.83"
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0.40"
proc-macro2 = "1.0.95"
color-eyre = "0.6.3"
validator = { version = "0.20", features = ["derive"] }
 
[features]
default = ["color-sql"]
color-sql = ["dep:syntect"]

[build-dependencies]
utoipa-config = "0.1.2"
