[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
business = {path="../business"}
macros = {path="../macros"}
axum = { version = "0.8.8", features = ["query", "macros"] }
serde = "1.0.228"
tokio = { version = "1.49.0", features = ["full"] }
tower = { version = "0.5.3", features = ["full"] }
tower-http = { version = "0.6.8", features = ["full"] }
uuid = { version = "1.20.0", features = ["serde", "v4"] }
anyhow = { version = "1.0.100", features = ["backtrace"] }
rust_decimal = { version = "1.40.0", features = ["serde-with-arbitrary-precision"] }
time = { version = "0.3.46", features = ["macros", "formatting", "serde"] }
tracing-subscriber = { version = "0.3.22", features = ["std", "env-filter"] }
tracing = { version = "0.1.44", features = ["async-await", "log"] }
tracing-opentelemetry = { version = "0.32.1" }
opentelemetry = { version = "0.31.0", features = ["metrics"] }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
serde_json = "1.0.149"
utoipa = { version = "5.4.0", features = ["axum_extras", "time", "uuid", "decimal_float", "config", "debug"] }
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }
rust_decimal_macros = "1.40.0"
paste = "1.0.15"
axum-extra = { version = "0.12.5", features = ["typed-header"] }
itertools = "0.14.0"
syntect = { optional = true, version = "5.3.0" }
async-trait = "0.1.89"
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0.44"
proc-macro2 = "1.0.106"
color-eyre = "0.6.5"
validator = { version = "0.20", features = ["derive"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
 
[features]
default = ["color-sql"]
color-sql = ["dep:syntect"]

[build-dependencies]
utoipa-config = "0.1.2"
