[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
business = { path = "../business", default-features = false }
connectors = { path = "../connectors" }
dal = { path = "../dal" }
macros = {path="../macros"}
shared = { path = "../shared", features = ["backend"] }
observability = { path = "../observability" }
axum = { version = "0.8.9", features = ["query", "macros"] }
serde = "1.0.228"
tokio = { version = "1.52.3", features = ["full"] }
tower = { version = "0.5.3", features = ["full"] }
tower-http = { version = "0.7.0", features = ["full"] }
uuid = { version = "1.23.3", features = ["serde", "v4"] }
anyhow = { version = "1.0.102", features = ["backtrace"] }
rust_decimal = { version = "1.42.1", features = ["serde-with-arbitrary-precision"] }
time = { version = "0.3.51", features = ["macros", "formatting", "serde"] }
tracing = { version = "0.1.44", features = ["async-await", "log"] }
serde_json = "1.0.150"
utoipa = { version = "5.5.0", features = ["axum_extras", "time", "uuid", "decimal_float", "config", "debug"] }
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }
rust_decimal_macros = "1.40.0"
paste = "1.0.15"
axum-extra = { version = "0.12.6", features = ["typed-header"] }
itertools = "0.15.0"
reqwest = { version = "0.13", features = ["json"], optional = true }
async-trait = "0.1.89"
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0.46"
proc-macro2 = "1.0.106"
color-eyre = "0.6.5"
validator = { version = "0.20", features = ["derive"] }
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
dotenvy = "0.15"
thiserror = "2"
futures = "0.3"
async-stream = "0.3"
tower_governor = { version = "0.8", features = ["tracing"] }

[features]
default = ["noauth", "seed"]
seed = []
database = ["business/database"]
clerk = ["dep:reqwest", "business/clerk"]
noauth = ["business/noauth"]
