[package]
name = "asset_aggregator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }
business = {path="../business"}
yahoo_finance_api = "2.1.0"
rust_decimal = "1.32.0"
