[package]
name = "asset_aggregator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "add_data_to_existing_asset_pair"
path = "src/add_data_to_existing_asset_pair.rs"

[[bin]]
name = "add_new_asset_with_data"
path = "src/add_new_asset_with_data.rs"

[[bin]]
name = "update_current_assets"
path = "src/update_current_assets.rs"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
business = {path="../business"}
yahoo_finance_api = "2.1.0"
rust_decimal = "1.34.3"
