[package]
name = "business"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dal = {path="../dal"}
anyhow = { version = "1.0.100", features = ["backtrace"] }
tokio = { version = "1.49.0", features = ["full"] }
argon2 = { version = "0.5.3", features = ["std"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
jsonwebtoken = "10.3.0"
serde = "1.0.228"
time = { version = "0.3.46", features = ["macros", "formatting", "serde"] }
rust_decimal = "1.40.0"
tracing = { version = "0.1.44", features = ["async-await", "log"] }
mockall = "0.14.0"
mockall_double = "0.3.1"
rust_decimal_macros = "1.40.0"
derivative = "2.2.0"
itertools = "0.14.0"
once_cell = "1.21.3"
thiserror = "2.0.18"
async-trait = "0.1.89"
