[package]
name = "business"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dal = {path="../dal"}
ai = {path="../ai"}
connectors = { path = "../connectors" }
pgvector = { version = "0.4", features = ["sqlx"] }
anyhow = { version = "1.0.102", features = ["backtrace"] }
tokio = { version = "1.52.3", features = ["full"] }
argon2 = { version = "0.5.3", features = ["std"] }
uuid = { version = "1.23.3", features = ["v4", "serde"] }
jsonwebtoken = "10.4.0"
serde = { version = "1.0.228", features = ["derive"] }
time = { version = "0.3.51", features = ["macros", "formatting", "serde"] }
rust_decimal = "1.42.1"
bitflags = "2.13"
tracing = { version = "0.1.44", features = ["async-await", "log"] }
mockall = "0.14.0"
mockall_double = "0.3.1"
rust_decimal_macros = "1.40.0"
derivative = "2.2.0"
itertools = "0.15.0"
once_cell = "1.21.4"
rand = { version = "0.10", optional = true }
sha2 = { version = "0.11", optional = true }
base64 = "0.22"
thiserror = "2.0.18"
async-trait = "0.1.89"
futures = "0.3"
serde_json = "1.0"
reqwest = { version = "0.13", features = ["json"], optional = true }
async-stream = "0.3"

[dev-dependencies]
sqlx = { version = "0.9.0", features = ["postgres"] }

[features]
default = ["noauth"]
database = ["dep:rand", "dep:sha2"]
clerk = ["dep:reqwest"]
noauth = []
