[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
business = {path="../business"}
yahoo_finance_api = "2.3.0"
rust_decimal = "1.36.0"
lazy_static = "1.5.0"
