[package]
name = "connectors"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", default-features = false, features = ["json"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde"] }
anyhow = "1"
tracing = "0.1"
time = { version = "0.3", features = ["serde", "formatting", "macros", "parsing"] }
thiserror = "2"
observability = { path = "../observability" }
sha2 = "0.10"
digest = "0.10"
rust_decimal = { version = "1", features = ["serde-with-arbitrary-precision"] }
base64 = "0.22"
serde_urlencoded = "0.7"
url = "2"

[dev-dependencies]
mockall = "0.14.0"
