[package]
name = "dal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.102", features = ["backtrace"] }
async-trait = "0.1.89"
sea-query = { version = "1", features = ["backend-postgres", "postgres-array", "with-uuid", "with-time", "with-rust_decimal", "with-json", "postgres-vector"] }
sea-query-sqlx = { version = "0.9.1", features = ["sqlx-postgres", "postgres-array", "with-uuid", "with-time", "with-rust_decimal", "with-json", "postgres-vector"] }
sqlx = { version = "0.9.0", features = ["runtime-tokio", "tls-rustls-ring", "postgres", "uuid", "time", "rust_decimal", "macros", "migrate", "json"] }
tokio = { version = "1.52.3", features = ["full"] }
tracing = { version = "0.1.44", features = ["async-await", "log"] }
mockall = "0.14.0"
strum = { version = "0.28.0", features = ["derive"] }
time = { version = "0.3.51", features = ["macros", "formatting", "parsing"] }
observability = { path = "../observability" }
macros = { path = "../macros" }
uuid = { version = "1", features = ["serde"] }
rust_decimal = "1"
pgvector = { version = "0.4", features = ["sqlx"] }
rust-s3 = { version = "0.37", features = ["tokio-rustls-tls"], default-features = false }
http = "1"
thiserror = "2"
redis = { version = "1.2", features = ["tokio-comp", "connection-manager"] }
once_cell = "1.21.4"
apalis = { version = "=1.0.0-rc.9", features = ["tracing"] }
apalis-postgres = { git = "https://github.com/EinarasGar/apalis-postgres", rev = "b13a033efb4d720be702dce5e4f1b5f3493c4099", features = ["time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
