[package]
name = "observability"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { version = "0.1.44", features = ["async-await", "log"] }
tracing-subscriber = { version = "0.3.23", features = ["std", "env-filter"] }
tracing-opentelemetry = { version = "0.33.0" }
opentelemetry = { version = "0.32.0", features = ["logs", "metrics"] }
opentelemetry_sdk = { version = "0.32.1", features = ["logs", "rt-tokio"] }
opentelemetry-otlp = { version = "0.32.0", features = ["http-proto", "logs", "reqwest-rustls-webpki-roots"] }
opentelemetry-appender-tracing = "0.32.0"
reqwest = { version = "0.13", default-features = false, features = ["json"] }
reqwest-middleware = { version = "0.5", features = ["json"] }
reqwest-tracing = { version = "0.7", features = ["opentelemetry_0_31"] }

[features]
default = []
