[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.20", features = ["serde", "v4"] }
rust_decimal = { version = "1.40", features = ["serde-with-arbitrary-precision"] }
rust_decimal_macros = "1.40"
time = { version = "0.3", features = ["serde", "serde-well-known"] }
macros = { path = "../macros" }
paste = "1.0"
validator = { version = "0.20", features = ["derive"] }
utoipa = { version = "5.4", features = ["axum_extras", "time", "uuid", "decimal_float", "config", "debug"] }
anyhow = "1.0"
itertools = "0.14"
uniffi = { version = "0.31", features = ["tokio"] }

# Feature-gated
business = { path = "../business", default-features = false, optional = true }

[features]
default = []
backend = ["dep:business"]

[build-dependencies]
utoipa-config = "0.1.2"
