[package]
name = "worker"
version = "0.1.0"
edition = "2021"
default-run = "worker"

[dependencies]
business = { path = "../business", default-features = false, features = ["noauth"] }
dal = { path = "../dal" }
ai = { path = "../ai" }
observability = { path = "../observability", features = ["color-sql"] }
apalis = { version = "0.7", features = ["tracing", "catch-panic"] }
apalis-sql = { version = "0.7", features = ["postgres"] }
apalis-cron = { version = "0.7" }
tokio = { version = "1.49.0", features = ["full"] }
tracing = { version = "0.1.44", features = ["async-await", "log"] }
anyhow = { version = "1.0.100", features = ["backtrace"] }
color-eyre = "0.6.5"
dotenvy = "0.15"
clap = { version = "4.5.56", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
futures = "0.3"
uuid = { version = "1", features = ["serde"] }
image = { version = "0.25", default-features = false, features = ["webp", "jpeg", "png", "gif", "bmp"] }
infer = "0.19"
once_cell = "1"
pgvector = { version = "0.4", features = ["sqlx"] }
rust_decimal = "1.40.0"
time = "0.3"
