[package]
name = "worker"
version = "0.1.0"
edition = "2021"
default-run = "worker"

[dependencies]
business = { path = "../business", default-features = false, features = ["noauth"] }
dal = { path = "../dal" }
ai = { path = "../ai" }
observability = { path = "../observability" }
apalis = { version = "=1.0.0-rc.9", features = ["tracing", "catch-panic"] }
apalis-postgres = { git = "https://github.com/EinarasGar/apalis-postgres", rev = "b13a033efb4d720be702dce5e4f1b5f3493c4099", features = ["time"] }
apalis-cron = { version = "=1.0.0-rc.8" }
cron = "0.16"
tokio = { version = "1.52.3", features = ["full"] }
tracing = { version = "0.1.44", features = ["async-await", "log"] }
anyhow = { version = "1.0.102", features = ["backtrace"] }
color-eyre = "0.6.5"
dotenvy = "0.15"
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
async-trait = "0.1.89"
chrono = "0.4"
futures = "0.3"
uuid = { version = "1", features = ["serde"] }
image = { version = "0.25", default-features = false, features = ["webp", "jpeg", "png", "gif", "bmp"] }
infer = "0.19"
once_cell = "1"
pgvector = { version = "0.4", features = ["sqlx"] }
rust_decimal = "1.42.1"
time = "0.3"
base64 = "0.22"
serde_json = "1"
rand = "0.10"
